[package]
name = "youtube_player"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
rustypipe = "0.11.4"
libmpv2 = "4.1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
mpv = "0.2.3"
color-eyre = "0.6.3"
ratatui = "0.29.0"
rquickjs = { version = "0.9", features = ["bindgen]}

